--- a/lab_assign_7.ipynb
+++ b/lab_assign_7.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMO5mOg6/AhxiXa5f8+KByx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sujansiddarthh/AIML-batch-20/blob/main/lab_assign_7.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "oYd_K2Y4UeYv"
       },
@@ -37,7 +49,7 @@
       "metadata": {
         "id": "6bi9OjWhUwCz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +60,7 @@
       "metadata": {
         "id": "WScpNbNwUz6Y"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +75,7 @@
         "id": "K-lFZoDyU2u4",
         "outputId": "b70f463e-bcbd-45ad-f4cc-8e9ebd7dda66"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -89,7 +101,7 @@
         "id": "qOqXaZJ2U-5i",
         "outputId": "4f2a983a-8254-46c9-e4e5-6d99646beb87"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +241,7 @@
         "id": "xe0c8YZKVDeM",
         "outputId": "dbe9035a-dabd-41cb-c14a-327f7c98d1ac"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +277,7 @@
         "id": "SJYiP9AgV5br",
         "outputId": "d7279f8e-b448-493c-eb0c-3e84410d6616"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +337,7 @@
         "id": "S1cK4clFV_BZ",
         "outputId": "2eb1bd91-dec6-42dd-8024-b8b2d4709bf7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,7 +877,7 @@
         "id": "H9VEV1W9WFTB",
         "outputId": "ce0906c5-d2ad-4c0a-f032-dec142211288"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +903,7 @@
         "id": "SmKfpkuDWI7j",
         "outputId": "01eca533-6bde-4701-afbe-67ce4f58924c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -944,7 +956,7 @@
         "id": "cyyhnXxTWN87",
         "outputId": "fc792ccd-8178-4fea-e036-2368f286bc99"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1389,7 +1401,7 @@
         "id": "jRw0J1qJWRsI",
         "outputId": "41ade584-e2b1-42ae-fd21-34bbe586d82a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1452,7 @@
         "id": "IuxJIPN_WXWk",
         "outputId": "b4e53492-3bc5-4422-f3d1-cb1a17472f00"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1613,7 +1625,7 @@
         "id": "xwTHRcPqWoV_",
         "outputId": "f543f0ee-1bce-4e50-aa07-ac986f9b184e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1652,7 +1664,7 @@
         "id": "EHIq1-lyWuGG",
         "outputId": "59e19033-d433-4360-9e4b-7a8f29ac603a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2098,7 +2110,7 @@
         "id": "BI5BzRcRWx0j",
         "outputId": "9ae91cf5-1624-41da-9b9e-8a34728955b2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2137,7 @@
       "metadata": {
         "id": "2__IC7CSW0n3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2143,7 +2155,7 @@
         "id": "D-nzbO_hXOmb",
         "outputId": "158d443d-1a03-47eb-f7fc-c64b66d658c4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2168,7 +2180,7 @@
         "id": "EI8VBLp-XWzE",
         "outputId": "20d860eb-8667-4a2a-8cef-1ec1a02d8c8d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
